#1477 closed defect (fixed)
fix asf demuxer
Reported by: | ami_stuff | Owned by: | |
---|---|---|---|
Priority: | normal | Component: | avformat |
Version: | unspecified | Keywords: | asf |
Cc: | Blocked By: | ||
Blocking: | Reproduced by developer: | yes | |
Analyzed by developer: | no |
Description
As a side note, I must say that lavf ASF demuxer outputs wrong data, so for example eleventh or twelfth frame in http://samples.ffmpeg.org/V-codecs/MSS1/screen_codec.wmv is demuxed wrong compared to MPlayer. And of course it causes decoding errors.
http://article.gmane.org/gmane.comp.video.libav.devel/28505
http://samples.ffmpeg.org/V-codecs/MSS1/screen_codec.wmv
http://samples.ffmpeg.org/V-codecs/MSS1/GipsyGuitar.wmv
C:\>ffmpeg -i screen_codec.wmv out.avi ffmpeg version N-41793-gcb08b6e Copyright (c) 2000-2012 the FFmpeg developers built on Jun 21 2012 14:12:34 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc 14) configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch= x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect --enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 - lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s napshots/build/lib' --enable-bz libavutil 51. 59.100 / 51. 59.100 libavcodec 54. 29.100 / 54. 29.100 libavformat 54. 10.100 / 54. 10.100 libavdevice 54. 0.100 / 54. 0.100 libavfilter 2. 82.100 / 2. 82.100 libswscale 2. 1.100 / 2. 1.100 libswresample 0. 15.100 / 0. 15.100 libpostproc 52. 0.100 / 52. 0.100 Guessed Channel Layout for Input Stream #0.0 : mono Input #0, asf, from 'screen_codec.wmv': Metadata: WMFSDKVersion : 7.01.00.3055 WMFSDKNeeded : 0.0.0.0000 Duration: 00:01:35.87, start: 0.192000, bitrate: 82 kb/s Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 8000 Hz, mono, s16, 0 kb/s Stream #0:1: Video: mss1 (MSS1 / 0x3153534D), pal8, 1024x768, 1k tbr, 1k tbn , 1k tbc w:1024 h:768 pixfmt:pal8 tb:1/1000 fr:1000/1 sar:0/1 sws_param:flags=2 [ffmpeg_buffersink @ 0x1e17c20] No opaque field provided [format @ 0x1e17f00] auto-inserting filter 'auto-inserted scaler 0' between the filter 'Parsed_null_0' and the filter 'format' [auto-inserted scaler 0 @ 0x1e18900] w:1024 h:768 fmt:pal8 sar:0/1 -> w:1024 h:7 68 fmt:yuv420p sar:0/1 flags:0x4 Output #0, avi, to 'out.avi': Metadata: WMFSDKVersion : 7.01.00.3055 WMFSDKNeeded : 0.0.0.0000 ISFT : Lavf54.10.100 Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 1024x768, q=2-31, 20 0 kb/s, 1k tbn, 1k tbc Stream #0:1: Audio: mp3 (U[0][0][0] / 0x0055), 8000 Hz, mono, s16 Stream mapping: Stream #0:1 -> #0:0 (mss1 -> mpeg4) Stream #0:0 -> #0:1 (wmav2 -> libmp3lame) Press [q] to stop, [?] for help Multiple frames in a packet from stream 0 frame= 9 fps=0.0 q=24.0 size= 78kB time=00:00:02.23 bitrate= 287.2kbits/ Error while decoding stream #0:1: Invalid data found when processing input Last message repeated 4 times frame= 19 fps= 19 q=31.0 size= 150kB time=00:00:10.72 bitrate= 114.7kbits/ frame= 28 fps= 18 q=31.0 size= 277kB time=00:00:20.54 bitrate= 110.6kbits/ frame= 40 fps= 19 q=31.0 size= 348kB time=00:00:28.00 bitrate= 101.9kbits/ frame= 50 fps= 20 q=31.0 size= 426kB time=00:00:35.28 bitrate= 99.0kbits/ frame= 61 fps= 20 q=24.8 size= 508kB time=00:00:41.54 bitrate= 100.3kbits/ frame= 70 fps= 20 q=31.0 size= 619kB time=00:00:51.12 bitrate= 99.2kbits/ frame= 80 fps= 19 q=31.0 size= 728kB time=00:01:01.20 bitrate= 97.4kbits/ Error while decoding stream #0:1: Invalid data found when processing input Last message repeated 4 times frame= 88 fps= 19 q=31.0 size= 842kB time=00:01:11.64 bitrate= 96.2kbits/ Error while decoding stream #0:1: Invalid data found when processing input Last message repeated 18 times frame= 90 fps= 18 q=31.0 size= 928kB time=00:01:22.50 bitrate= 92.2kbits/ Error while decoding stream #0:1: Invalid data found when processing input Last message repeated 7 times frame= 95 fps= 17 q=31.0 Lsize= 2534kB time=00:01:33.81 bitrate= 221.3kbits /s video:258kB audio:17kB subtitle:0 global headers:0kB muxing overhead 821.800131%
Change History (4)
comment:1 Changed 7 years ago by michael
- Component changed from undetermined to avformat
- Keywords asf added
- Reproduced by developer set
- Resolution set to fixed
- Status changed from new to closed
comment:2 follow-up: ↓ 4 Changed 7 years ago by ami_stuff
comment:3 Changed 7 years ago by richardpl
Yes, asf demuxer is broken, there should be only one open bug report for it.
comment:4 in reply to: ↑ 2 Changed 4 years ago by cehoyos
Replying to ami_stuff:
"GipsyGuitar?.wmv" still have some problems
Should be fixed in 5a458420e2fb804c8995db8c2936a9974c46678c
Note: See
TracTickets for help on using
tickets.
"GipsyGuitar?.wmv" still have some problems (maybe related to ticket #1708)