asfdec: fix FRAME_HEADER_SIZE

Fixes Ticket1477

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>